--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,11 +40,24 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/src/crc32c/CMakeLists.txt")
   add_subdirectory("${CMAKE_SOURCE_DIR}/src/crc32c" EXCLUDE_FROM_ALL)
   set(CRC32C_LIB crc32c)
 else()
-  find_package(PkgConfig QUIET)
-  if(PKG_CONFIG_FOUND)
-    pkg_check_modules(PC_CRC32C QUIET crc32c)
+  # Try Google CRC32C package first (Ubuntu 22.04+)
+  find_package(google_crc32c QUIET)
+  if(google_crc32c_FOUND)
+    set(CRC32C_LIB crc32c)
+  else()
+    # Fallback to pkg-config detection
+    find_package(PkgConfig QUIET)
+    if(PKG_CONFIG_FOUND)
+      pkg_check_modules(PC_CRC32C QUIET libcrc32c)
+      if(PC_CRC32C_FOUND)
+        set(CRC32C_LIB PkgConfig::PC_CRC32C)
+      endif()
+    endif()
+    # Final fallback to library search
+    if(NOT CRC32C_LIB)
+      find_library(CRC32C_LIB NAMES crc32c HINTS /usr/lib /usr/local/lib)
+    endif()
   endif()
-  find_library(CRC32C_LIB NAMES crc32c HINTS ${PC_CRC32C_LIBRARY_DIRS} /usr/lib /usr/local/lib)
 endif()
 
 # leveldb
