🚀 CI/CD Fix: Remove unavailable Google CRC32C packages from Ubuntu 22.04
- Removed google-crc32c and libgoogle-crc32c-dev from CI dependencies (not available in Ubuntu 22.04)
- Simplified CRC32C detection to rely primarily on subtrees with graceful fallback
- Added WITH_CRC32C option for optional CRC32C support
- Added BITCOIN_NO_CRC32C=1 compile definition when CRC32C unavailable
- Prevents 'Unable to locate package' errors in Ubuntu 22.04 CI builds

This resolves the final Ubuntu package installation blocker while maintaining
robust CRC32C support through subtrees and optional system library detection.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,22 +40,16 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/src/crc32c/CMakeLists.txt")
   add_subdirectory("${CMAKE_SOURCE_DIR}/src/crc32c" EXCLUDE_FROM_ALL)
   set(CRC32C_LIB crc32c)
 else()
-  # Try Google CRC32C package first (Ubuntu 22.04+)
-  find_package(google_crc32c QUIET)
-  if(google_crc32c_FOUND)
-    set(CRC32C_LIB crc32c)
-  else()
-    # Fallback to pkg-config detection
-    find_package(PkgConfig QUIET)
-    if(PKG_CONFIG_FOUND)
-      pkg_check_modules(PC_CRC32C QUIET libcrc32c)
-      if(PC_CRC32C_FOUND)
-        set(CRC32C_LIB PkgConfig::PC_CRC32C)
-      endif()
-    endif()
-    # Final fallback to library search
-    if(NOT CRC32C_LIB)
-      find_library(CRC32C_LIB NAMES crc32c HINTS /usr/lib /usr/local/lib)
+  # Fallback to system library search (most distributions don't package CRC32C)
+  find_library(CRC32C_LIB NAMES crc32c HINTS /usr/lib /usr/local/lib)
+  if(NOT CRC32C_LIB)
+    message(STATUS "CRC32C not found as system library; will build without CRC32C support or rely on subtree.")
+    # Allow building without CRC32C if not available
+    option(WITH_CRC32C "Enable CRC32C support" OFF)
+    if(WITH_CRC32C)
+      message(FATAL_ERROR "WITH_CRC32C=ON but no subtree found and no system library available.")
+    else()
+      add_compile_definitions(BITCOIN_NO_CRC32C=1)
     endif()
   endif()
 endif()
