--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,9 +61,7 @@ jobs:
           qttools5-dev \
           qttools5-dev-tools \
           libleveldb-dev \
-          libsecp256k1-dev \
-          google-crc32c \
-          libgoogle-crc32c-dev
+          libsecp256k1-dev
 
     - name: Install dependencies (macOS)
       if: matrix.os == 'macos-12'
