🚀 COMPREHENSIVE CI/CD ENHANCEMENTS: Manifests, reproducible builds, and advanced workflows
MAJOR REPRODUCIBLE BUILD IMPROVEMENTS:

1. **Windows vcpkg Manifest Mode:**
   - vcpkg.json: Pinned dependencies with deterministic baseline
   - vcpkg-configuration.json: Locked registry for reproducible builds
   - Updated Windows workflow with proper caching and manifest mode
   - Eliminates Windows build variability and dependency conflicts

2. **Conan Support for Linux/macOS (Optional):**
   - conanfile.txt: Pinned versions for all major dependencies
   - CMake integration with USE_CONAN option
   - Enables reproducible builds across all platforms when needed

3. **Dockerized Linux Workflow:**
   - build-linux-docker.yml: Containerized builds with GHCR
   - Eliminates apt package flakiness and environment drift
   - Scheduled nightly builds for continuous validation

4. **Enhanced Test Infrastructure:**
   - Runtime smoke test for node binary (--help validation)
   - Automatic test discovery when bitdecentral_node target exists
   - Improved test coverage with real binary execution

5. **Code Quality and Style:**
   - .clang-format: LLVM-based formatting with 120 column limit
   - build-linux-strict.yml: Warnings-as-errors job (non-blocking)
   - Enhanced lint workflow for consistent code style

6. **Incremental Module Enablement:**
   - build-interop.yml: Dedicated workflow for interop module
   - Path-based triggering for targeted CI runs
   - Framework for gradually re-enabling complex modules

7. **Developer Experience:**
   - Comprehensive caching strategies across all workflows
   - Clear separation of concerns (baseline vs advanced features)
   - Optional workflows for different development phases

EXPECTED RESULTS:
- ✅ Deterministic Windows builds via vcpkg manifest
- ✅ Optional reproducible Linux/macOS builds via Conan
- ✅ Containerized CI for maximum stability
- ✅ Automatic binary validation when node exists
- ✅ Consistent code formatting across contributors
- ✅

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -11,12 +11,16 @@ jobs:
 
       - name: Setup vcpkg
         uses: lukka/run-vcpkg@v11
+
+      - name: Cache vcpkg installed
+        uses: actions/cache@v4
         with:
-          vcpkgGitCommitId: b9bc2a69d1c9a6c1b1a0c2c1b1a0f6dcf0d88b2a
+          path: ${{ env.VCPKG_ROOT }}\installed
+          key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json', 'vcpkg-configuration.json') }}
 
       - name: Configure
         run: >
-          cmake -S . -B build -G "Ninja"
+          cmake -S . -B build
           -DCMAKE_BUILD_TYPE=Release
           -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}\scripts\buildsystems\vcpkg.cmake
           -DBUILD_TESTING=ON -DENABLE_WALLET=OFF -DENABLE_INTEROP=OFF
