--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,9 +1,9 @@
-# Minimal core library
-add_library(corelib INTERFACE)
-target_include_directories(corelib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-
-# Add a simple header for now
-if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/version.h")
-  file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/version.h" 
-    "#pragma once\n#define BITCOIN_DECENTRAL_VERSION \"0.1.0\"\n")
+# src/core/CMakeLists.txt (temporary safe stub)
+if(TARGET corelib)
+  message(STATUS "Skipping corelib redefinition (already exists)")
+else()
+  # When you're ready, define your real library under a unique name, e.g., 'bdc_core'
+  add_library(bdc_core INTERFACE)
+  target_include_directories(bdc_core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+  add_library(corelib ALIAS bdc_core)  # Optional: provide the old name as an ALIAS
 endif()
