--- a/src/node/CMakeLists.txt
+++ b/src/node/CMakeLists.txt
@@ -1,12 +1,14 @@
+# Minimal node binary so CI has something to build/run.
 add_executable(bitdecentral_node
   main.cpp
 )
 
-target_include_directories(bitdecentral_node PRIVATE
-  ${CMAKE_CURRENT_SOURCE_DIR}
-  ${CMAKE_SOURCE_DIR}/src/core
-)
-
-target_link_libraries(bitdecentral_node PRIVATE
-  corelib
-)
+# If a real 'corelib' target exists AND it's not INTERFACE, you can link it later.
+# For now, keep the node independent so we don't trip over the existing INTERFACE 'corelib'.
+# Example (to enable later):
+# if(TARGET corelib)
+#   get_target_property(_type corelib TYPE)
+#   if(NOT _type STREQUAL "INTERFACE_LIBRARY")
+#     target_link_libraries(bitdecentral_node PRIVATE corelib)
+#   endif()
+# endif()
